# Whistle-----Privacy-Protocol-Demo

./: .gitignore  DEPLOYMENT.md  README.md  package-lock.json  package.json
circuits/: DEPLOYMENT.md  PRODUCTION_CIRCUITS.md  compute-input.js  convert-vk-to-rust.js  convert_vk_be.js  deposit.circom  export-solana.js  generate-proof.js  package-lock.json  package.json  private_transfer.circom  test-circuit.js  test-proof.js  unshield.circom  unshield_change.circom  withdraw.circom  withdraw_demo.circom  withdraw_final.circom  withdraw_full.circom  withdraw_merkle.circom  withdraw_onchain.circom  withdraw_simple.circom
circuits/ceremony/: CEREMONY_GUIDE.md  README.md  contribute.js  genesis.js  package.json  verify.js
circuits/ceremony/api/: package.json  server.js
circuits/ceremony/web/: index.html
circuits/ceremony/web/contributions/: latest.json  stats.json
circuits/lib/: merkle.circom  poseidon_merkle.circom  range_proof.circom
circuits/scripts/: compile-production.js  convert-vk-solana.js  generate-test-inputs.js  trusted-setup.js
circuits/sdk/: proof-generator.ts
contracts/: Anchor.toml  Cargo.toml  package-lock.json  package.json
contracts/programs/whistle-merkle/: Cargo.toml
contracts/programs/whistle-merkle/src/: lib.rs
contracts/programs/whistle-pool/: Cargo.toml  program-keypair2.json
contracts/programs/whistle-pool/src/: groth16.rs  lib.rs
contracts/programs/whistle-verifier/: Cargo.toml
contracts/programs/whistle-verifier/src/: lib.rs
contracts/tests/: complete-withdrawal.ts  demo-withdrawal.ts  execute-withdrawal.ts  full-privacy-flow.ts  init-pool.ts  shielded-balance-test.ts  test-deployed.ts  test-devnet-full.ts  test-full-privacy.ts  test-privacy-demo.ts  test-private-transfer.ts  test-real-withdrawal.ts  test-unshield-change.ts  test-zk-withdraw.ts  withdraw-only.ts  zk-simple-test.ts  zk-swapped-test.ts
docs/: ARCHITECTURE.md  DEPLOYMENT.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: NotesPanel.tsx  PoolStats.tsx  ShieldPanel.tsx  UnshieldPanel.tsx  WalletProviders.tsx
frontend/lib/: snarkjs.d.ts  zkProof.ts
frontend/public/circuits/: verification_key_simple.json  withdraw_merkle_final.zkey  withdraw_simple.wasm  withdraw_simple_final.zkey
indexer/: package.json
relayer/: package-lock.json  package.json  relayer.db  tsconfig.json
relayer/src/: index.ts
sdk/: package.json
sdk/src/: client.ts  index.ts  prover.ts
sdk/src/core/: constants.ts
