[package]
name = "whistle-merkle"
version = "1.0.0"
description = "Whistle Protocol - Merkle Tree Management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "whistle_merkle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
