[package]
name = "whistle-pool"
version = "1.0.0"
description = "Whistle Protocol Privacy Pool - ZK-verified deposits and withdrawals"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "whistle_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
anchor-client = "0.30.1"
