[package]
name = "whistle-verifier"
version = "1.0.0"
description = "Whistle Protocol - Groth16 ZK Proof Verifier"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "whistle_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"




version = "1.0.0"
description = "Whistle Protocol - Groth16 ZK Proof Verifier"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "whistle_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"


version = "1.0.0"
description = "Whistle Protocol - Groth16 ZK Proof Verifier"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "whistle_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"




version = "1.0.0"
description = "Whistle Protocol - Groth16 ZK Proof Verifier"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "whistle_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"

